[gd_scene load_steps=5 format=3 uid="uid://b85am47by1gws"]

[ext_resource type="Script" path="res://ant.gd" id="1_fn286"]
[ext_resource type="Texture2D" uid="uid://cupgivx2usdt" path="res://atlas.png" id="1_i6ikt"]

[sub_resource type="CircleShape2D" id="CircleShape2D_wdt0s"]
radius = 1.55353

[sub_resource type="CircleShape2D" id="CircleShape2D_jxl4d"]
radius = 24.0

[node name="Ant" type="CharacterBody2D"]
collision_mask = 23
script = ExtResource("1_fn286")

[node name="Sprite2D" type="Sprite2D" parent="."]
rotation = 1.5708
scale = Vector2(0.45, 0.45)
texture = ExtResource("1_i6ikt")
region_enabled = true
region_rect = Rect2(18, 0, 12, 16)

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_wdt0s")

[node name="state" type="Label" parent="."]
offset_right = 40.0
offset_bottom = 23.0

[node name="StateTimer" type="Timer" parent="."]
unique_name_in_owner = true
one_shot = true

[node name="PheromoneTimer" type="Timer" parent="."]
unique_name_in_owner = true
wait_time = 2.0
autostart = true

[node name="Detector" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 255

[node name="CollisionShape2D" type="CollisionShape2D" parent="Detector"]
shape = SubResource("CircleShape2D_jxl4d")

[node name="FoodCarry" type="Sprite2D" parent="."]
unique_name_in_owner = true
position = Vector2(4, 0)
scale = Vector2(0.333333, 0.285714)
texture = ExtResource("1_i6ikt")
region_enabled = true
region_rect = Rect2(69, 52, 6, 7)

[connection signal="timeout" from="StateTimer" to="." method="_on_state_timer_timeout"]
[connection signal="timeout" from="PheromoneTimer" to="." method="_on_pheromone_timer_timeout"]
[connection signal="body_entered" from="Detector" to="." method="_on_detector_body_entered"]
